--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
 
     <modules>
         <module>panama-tutorial-001</module>
+        <module>panama-tutorial-002</module>
     </modules>
 
     <build>
