--- a/panama-tutorial-003/pom.xml
+++ b/panama-tutorial-003/pom.xml
@@ -13,13 +13,18 @@
         <version>0.1-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <project.specific.native.jar.path>${project.basedir}\lib\target\jar\center.h.jar</project.specific.native.jar.path>
+        <project.specific.native.library.path>${project.basedir}\lib\target\gcc</project.specific.native.library.path>
+    </properties>
+
     <dependencies>
         <dependency>
-            <groupId>com.github.tornaia</groupId>
-            <artifactId>panama-tutorial-003-c</artifactId>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>${project.artifactId}-native</artifactId>
             <version>${project.version}</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/target/jar/center.h.jar</systemPath>
+            <systemPath>${project.specific.native.jar.path}</systemPath>
         </dependency>
     </dependencies>
 </project>
